test/fixtures/_snapshots/formatTest_errorTests.51518687.0.snapshot
formatTest › errorTests › ./test/fixtures/formatTest/errorTests/reservedRecordTypePunned.re
File \"./test/fixtures/formatTest/errorTests/reservedRecordTypePunned.re\", line 1, characters 11-15:
1 | type x = { type };
               ^^^^
Error: type is a reserved keyword, it cannot be used as an identifier. Try `type_` or `_type` instead


